image handler added

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,8 +5,20 @@
 <title>Insert title here</title>
 </head>
 <body>
-	
-	
-	
+	<header id="header">
+        <div class="logo">
+            <a href="/">
+                <img src="logo.png" alt="Bookstore log">
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#cart">Cart</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contacts</a></li>
+                <li><a href="/logout">Log Out</a></li>
+            </ul>
+        </nav>
+    </header>	
 </body>
 </html>
