--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,23 +3,13 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Home Page</title>
-	<link th:href="@{/styles/homeStyle.css}" rel="stylesheet"/>
+	<link href="/styles/homeStyle.css" rel="stylesheet"/>
+	<link href="/styles/headerStyle.css" rel="stylesheet"/>
 	</head>
 	<body>
-		<header>
-        <div class="logo">
-            <a href="/home">
-                <img th:src="@{images/logo.png}" alt="Bookstore log">
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#cart">Cart</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contacts</a></li>
-                <li><a href="/logout">Log Out</a></li>
-            </ul>
-        </nav>
-    </header>
+		<header th:insert="~{fragments :: header}"></header>
+		<div class="containerOfbooks"></div>
+		
+		<script src="scripts/home.js"></script>
 	</body>
 </html>
