--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,9 +7,10 @@
 	<link href="/styles/headerStyle.css" rel="stylesheet"/>
 	</head>
 	<body>
-		<header th:insert="~{fragments :: header}"></header>
+		<header th:replace="~{fragments :: header}"></header>
 		<div class="containerOfbooks"></div>
-		
+		<img alt="" src="">
 		<script src="scripts/home.js"></script>
+		<script src="scripts/header.js"></script>
 	</body>
 </html>
