seeBook page added

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,7 +8,7 @@
 	<header id="header">
         <div class="logo">
             <a href="/">
-                <img src="logo.png" alt="Bookstore logo">
+                <img src="http://localhost:8080/logo.png" alt="Bookstore logo">
             </a>
         </div>
         <div class="user-menu">
