--- a/src/main/resources/static/styles/homeStyle.css
+++ b/src/main/resources/static/styles/homeStyle.css
@@ -1,13 +1,15 @@
+/* bookListStyle.css */
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
 
-/* config of all books */
-
-.containerOfbooks{
-	margin-left: 80px;
-	margin-right: 80px;
+.containerOfbooks {
+    margin-left: 80px;
+    margin-right: 80px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .book-block {
@@ -19,9 +21,10 @@ body {
     margin: 20px;
     margin-top: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     background-color: #fff;
+    align-items: center; 
 }
 
 .book-cover {
@@ -33,6 +36,14 @@ body {
     background-color: #eaeaea;
 }
 
+.book-cover a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .book-cover img {
     max-width: 100%;
     max-height: 100%;
@@ -40,6 +51,7 @@ body {
 }
 
 .book-info {
+    width: 100%;
     padding: 20px;
     background-color: #f9f9f9;
     text-align: center;
@@ -77,8 +89,4 @@ body {
 
 .book-info button:hover {
     background-color: #45a049;
-}
-
-.bookId {
-    display: none;
 }
