user's books page almost done

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,21 +8,21 @@
 	<header id="header">
         <div class="logo">
             <a href="/">
-                <img src="http://localhost:8080/logo.png" alt="Bookstore logo">
+                <img src="../logo.png" alt="Bookstore logo">
             </a>
         </div>
         <div class="user-menu">
             <div class="avatar" onclick="toggleDropdown()">
-                <img src="" alt="Avatar">
+                <img src="../users/avatar" alt="Avatar">
                 <span>Username</span>
             </div>
             <div class="dropdown" id="dropdown">
            	 	<a href="#cart">My Profile</a>
-                <a href="#mybooks">My Books</a>
-                <a href="/addBook">Add Book</a>
+                <a href="../userBooks">My Books</a>
+                <a href="../addBook">Add Book</a>
                 <a href="#cart">Cart</a>
                 <hr class="line">
-                <a href="/logout">Log Out</a>
+                <a href="../logout">Log Out</a>
             </div>
         </div>
     </header>
