--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -26,6 +26,9 @@
 					id="password" name="password" required>
 			</div>
 			<button type="submit">Register</button>
+			<div class="reg-href">
+				<a href="../login">Already have an account?</a>
+			</div>
 		</form>
 	</div>
 </body>
