--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
 			</div>
 			<button type="submit">Login</button>
 			<div class="reg-href">
-				<a href="/registration">Don't have an account?</a>
+				<a href="../registration">Don't have an account?</a>
 			</div>
 		</form>
 	</div>
