--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,12 +13,12 @@
         </div>
         <div class="user-menu">
             <div class="avatar" onclick="toggleDropdown()">
-                <img src="../users/avatar" alt="Avatar">
-                <span>Username</span>
+                <img id="avatar" alt="Avatar">
+                <span id="username">Username</span>
             </div>
             <div class="dropdown" id="dropdown">
            	 	<a href="#cart">My Profile</a>
-                <a href="../userBooks">My Books</a>
+                <a id="books">My Books</a>
                 <a href="../addBook">Add Book</a>
                 <a href="#cart">Cart</a>
                 <hr class="line">
