--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 			<p class="success-message">You successfully register!</p>
 		</div>
 		<div th:if="${param.error}">
-			<p class="error-message">Account doesn't exist</p>
+			<p class="error-message">Wrong Input!</p>
 		</div>
 		<form id="loginForm" action="/login" method="post">
 			<div class="input-group">
