--- a/src/main/resources/static/styles/homeStyle.css
+++ b/src/main/resources/static/styles/homeStyle.css
@@ -90,3 +90,51 @@ body {
 .book-info button:hover {
     background-color: #45a049;
 }
+
+.search-container {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px;
+}
+
+#searchInput {
+    padding: 8px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#searchButton {
+    padding: 8px 16px;
+    background-color: #007bff;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#searchButton:hover {
+    background-color: #0056b3;
+}
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination-link {
+    margin: 0 5px;
+    padding: 10px 15px;
+    text-decoration: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+}
+
+.pagination-link:hover {
+    background-color: #0056b3;
+}
+
+.pagination-link.active {
+    background-color: #0056b3;
+}
