--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,11 +20,12 @@
            	 	<a href="#cart">My Profile</a>
                 <a id="books">My Books</a>
                 <a href="../addBook">Add Book</a>
-                <a href="#cart">Cart</a>
+                <a id="cart">Cart</a>
                 <hr class="line">
                 <a href="../logout">Log Out</a>
             </div>
         </div>
     </header>
+    
 </body>
 </html>
