--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,7 @@
     </div>
     <div class="containerOfbooks"></div>
     <div class="pagination"></div>
+    <div id="notification"></div>
     <script src="scripts/home.js"></script>
     <script src="scripts/header.js"></script>
 </body>
