some improvements have been made

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,7 +17,7 @@
                 <span id="username">Username</span>
             </div>
             <div class="dropdown" id="dropdown">
-           	 	<a href="#cart">My Profile</a>
+           	 	<a id="profile">My Profile</a>
                 <a id="books">My Books</a>
                 <a href="../addBook">Add Book</a>
                 <a id="cart">Cart</a>
