--- a/src/main/resources/static/styles/loginStyle.css
+++ b/src/main/resources/static/styles/loginStyle.css
@@ -48,7 +48,7 @@ body {
 }
 
 button {
-	background: #007BFF;
+	background: #4CAF50;
 	color: white;
 	padding: 0.75rem 1rem;
 	border: none;
@@ -59,7 +59,7 @@ button {
 }
 
 button:hover {
-	background: #0056b3;
+	background: #45a049;
 }
 
 .register-container {
