Users profile page added

--- a/src/main/resources/static/styles/userBooks.css
+++ b/src/main/resources/static/styles/userBooks.css
@@ -62,3 +62,23 @@ tbody button:hover {
     max-width: 150px;
     max-height: 150px;
 }
+
+.notification {
+    position: fixed;
+    top: 60px; 
+    left: 20px;
+    background-color: #4caf50; 
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.notification.error {
+    background-color: #f44336; 
+}
+
+.notification.success {
+    background-color: #4caf50; 
+}
