--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
         </div>
         <div class="user-menu">
             <div class="avatar" onclick="toggleDropdown()">
-                <img id="avatar" alt="Avatar">
+                <img id="avatarAuth" alt="Avatar">
                 <span id="username">Username</span>
             </div>
             <div class="dropdown" id="dropdown">
