--- a/src/main/resources/templates/seeBook.html
+++ b/src/main/resources/templates/seeBook.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header th:replace="~{fragments :: header}"></header>
+    <div id="message"></div>
     <div class="container">
         
     </div>
