--- a/src/main/resources/static/styles/seeUserStyle.css
+++ b/src/main/resources/static/styles/seeUserStyle.css
@@ -1,4 +1,3 @@
-/* userProfile.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -32,23 +31,6 @@ h1 {
     margin: 0 auto 10px auto;
 }
 
-.file-input {
-    display: none;
-}
-
-.file-input + label {
-    display: inline-block;
-    cursor: pointer;
-    color: #333;
-    background-color: #ddd;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 0.9em;
-}
-
-.file-input + label:hover {
-    background-color: #ccc;
-}
 
 .form-group {
     margin-bottom: 15px;
@@ -76,6 +58,20 @@ button {
 
 button:hover {
     background-color: #555;
+}
+
+#seeBooks{
+	padding: 10px;
+	background-color: #4CAF50;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	margin-top: 10px;
+}
+
+#seeBooks:hover{
+	background-color: #45a049;
 }
 
 .notification {
