--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -30,6 +30,8 @@
                 <input type="number" name="numbersOfPages" placeholder="Number Of Pages" id="numbersOfPages" class="input-field"><br>
                 <input name="price" type="number" placeholder="Price" step=".01" class="input-field"><br>
                 
+                <input type="number" name="quantity" id="quantity" placeholder="Quantity" class="input-field" required><br>
+                
                 <textarea rows="15" cols="30" id="disc" name="description" placeholder="Description" class="textarea-field"></textarea><br>
                 <input type="date" name="dateOfPublishing" placeholder="Date Of Publishing" class="date-field"><br>
                 
