--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,7 +19,7 @@
             <div class="dropdown" id="dropdown">
            	 	<a id="profile">My Profile</a>
                 <a id="books">My Books</a>
-                <a href="../addBook">Add Book</a>
+                <a href="../books/new">Add Book</a>
                 <a id="cart">Cart</a>
                 <hr class="line">
                 <a href="../logout">Log Out</a>
