--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>User Profile</title>
-<link rel="stylesheet" href="/styles/seeUserStyle.css">
+<link rel="stylesheet" href="/styles/profileStyle.css">
 <link rel="stylesheet" href="/styles/headerStyle.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
 			<div id="notification" class="notification"></div>
 				<div class="avatar-container">
 					<img id="user-avatar" alt="Аватар пользователя" class="avatar">
+					<button id="removeAvatar">Remove Avatar</button>
 				</div>
 			<form id="userForm">
 				<div class="form-group">
@@ -44,6 +45,6 @@
 		</div>
 	</main>
 	<script src="/scripts/header.js"></script>
-	<script src="/scripts/seeUser.js"></script>
+	<script src="/scripts/profile.js"></script>
 </body>
 </html>
