--- a/src/main/resources/templates/userBooks.html
+++ b/src/main/resources/templates/userBooks.html
@@ -12,13 +12,8 @@
     <div id="notification"></div>
         <h1 id="titleText"></h1>
         <table id="booksTable">
-            <thead>
-                <tr>
-                    <th>Cover</th>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Actions</th>
-                </tr>
+            <thead id="headTable">
+                
             </thead>
             <tbody>
                 
