--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,9 +7,12 @@
 <body>
 	<header id="header">
         <div class="logo">
-            <a href="/">
+            <a href="../home">
                 <img src="../logo.png" alt="Bookstore logo">
             </a>
+        </div>
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Find book by title" />
         </div>
         <div class="user-menu">
             <div class="avatar" onclick="toggleDropdown()">
