--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header th:replace="~{fragments :: header}"></header>
+    <div id="notification"></div>
     <div class="cart-container">
         <table class="cart-table">
             <thead>
@@ -24,6 +25,21 @@
                 
             </tbody>
         </table>
+        <form id="shippingForm" class="shipping-form">
+            <div class="form-group">
+                <label for="fullName">ФИО:</label>
+                <input type="text" id="fullName" name="fullName" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Адрес доставки:</label>
+                <input type="text" id="address" name="address" required>
+            </div>
+            <div class="form-group">
+                <label for="phoneNumber">Номер телефона:</label>
+                <input type="tel" id="phoneNumber" name="phoneNumber" required>
+            </div>
+        </form>
+        
         <div class="total-price">
             <span>Общая сумма: </span><span id="totalPrice">0.00</span> грн.
         </div>
