--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,7 +23,7 @@
            	 	<a id="profile">My Profile</a>
                 <a id="books">My Books</a>
                 <a href="../books/new">Add Book</a>
-                <a id="cart">Cart</a>
+                <a href="../cart">Cart</a>
                 <hr class="line">
                 <a href="../logout">Log Out</a>
             </div>
