--- a/src/main/resources/static/styles/cartStyle.css
+++ b/src/main/resources/static/styles/cartStyle.css
@@ -8,6 +8,11 @@ body {
     margin: 20px auto;
 }
 
+.cart-table .cover-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
 .cart-table .cover {
     max-width: 150px;
     max-height: 150px;
@@ -59,7 +64,7 @@ body {
     text-align: right;
 }
 
-#checkoutButton {
+#checkoutButton, .remove-button {
     padding: 10px 20px;
     background-color: #4CAF50;
     border: none;
@@ -68,25 +73,50 @@ body {
     cursor: pointer;
 }
 
-#checkoutButton:hover {
+#checkoutButton:hover, .remove-button:hover{
     background-color: #45a049;
 }
 
-.notification {
-    display: none;
-    margin-bottom: 15px;
-    padding: 10px;
-    border-radius: 5px;
+#checkoutButton:disabled, .remove-button:disabled{
+    background-color: #bfedaf;
+    color: black;
+    cursor: auto;
 }
 
-.notification.success {
-    background-color: #dff0d8;
-    color: #3c763d;
-    border: 1px solid #d6e9c6;
+.notification {
+    position: fixed;
+    top: 60px;
+    left: 20px;
+    background-color: #4caf50; 
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .notification.error {
-    background-color: #f2dede;
-    color: #a94442;
-    border: 1px solid #ebccd1;
+    background-color: #f44336; 
+}
+
+.notification.success {
+    background-color: #4caf50; 
+}
+
+.sold-out-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    pointer-events: none;
+    z-index: 1;
 }
