--- a/src/main/resources/static/styles/profileStyle.css
+++ b/src/main/resources/static/styles/profileStyle.css
@@ -80,18 +80,22 @@ button:hover {
 }
 
 .notification {
-    display: none;
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.notification.success {
-    background-color: #4caf50;
+    position: fixed;
+    top: 60px; 
+    left: 20px;
+    background-color: #4caf50; 
     color: white;
+    padding: 15px;
+    border-radius: 5px;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: none;
 }
 
 .notification.error {
-    background-color: #f44336;
-    color: white;
+    background-color: #f44336; 
+}
+
+.notification.success {
+    background-color: #4caf50; 
 }
