--- a/src/main/resources/static/styles/seeBookStyle.css
+++ b/src/main/resources/static/styles/seeBookStyle.css
@@ -1,4 +1,3 @@
-/* bookDetailStyle.css */
 
 body {
     margin: 0;
@@ -33,6 +32,7 @@ body {
     background-color: #eaeaea;
     padding: 20px;
     border-radius: 10px;
+    position: relative;
 }
 
 .book-cover img {
@@ -40,6 +40,7 @@ body {
     max-height: 400px;
     object-fit: contain;
     border-radius: 10px;
+   
 }
 
 .book-info {
@@ -49,6 +50,10 @@ body {
     border-radius: 10px;
     text-align: center;
     margin-top: 20px;
+	display: flex;
+   	flex-direction:column;
+   	align-items : center;
+   	justify-content:center;
 }
 
 .book-info h2 {
@@ -73,9 +78,9 @@ body {
     text-overflow: ellipsis; 
 }
 
-.book-info a{
-	text-decoration: none;
-	color: black;
+.book-info a {
+    text-decoration: underline;
+    color: black;
 }
 
 .add-to-cart {
@@ -92,6 +97,25 @@ body {
     background-color: #45a049;
 }
 
+.sold-out-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    pointer-events: none;
+    border-radius: 4px;
+}
+
+
 .notification {
     position: fixed;
     top: 60px;
@@ -103,7 +127,6 @@ body {
     z-index: 1000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 
 .notification.error {
     background-color: #f44336; 
