--- a/src/main/resources/static/styles/updateBookStyle.css
+++ b/src/main/resources/static/styles/updateBookStyle.css
@@ -81,20 +81,22 @@ label {
 }
 
 .notification {
-    display: none;
-    margin-bottom: 15px;
-    padding: 10px;
+    position: fixed;
+    top: 60px; 
+    left: 20px;
+    background-color: #4caf50; 
+    color: white;
+    padding: 15px;
     border-radius: 5px;
-}
-
-.notification.success {
-    background-color: #dff0d8;
-    color: #3c763d;
-    border: 1px solid #d6e9c6;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: none;
 }
 
 .notification.error {
-    background-color: #f2dede;
-    color: #a94442;
-    border: 1px solid #ebccd1;
+    background-color: #f44336; 
+}
+
+.notification.success {
+    background-color: #4caf50; 
 }
