--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,37 +13,32 @@
         <table class="cart-table">
             <thead>
                 <tr>
-                    <th>Обложка</th>
-                    <th>Название</th>
-                    <th>Автор</th>
-                    <th>Цена</th>
-                    <th>Количество</th>
-                    <th>Удалить</th>
+                    <th>Cover</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 
             </tbody>
         </table>
-        <form id="shippingForm" class="shipping-form">
+        <form class="shipping-form">
             <div class="form-group">
-                <label for="fullName">ФИО:</label>
+                <label for="fullName">Full name:</label>
                 <input type="text" id="fullName" name="fullName" required>
             </div>
             <div class="form-group">
-                <label for="address">Адрес доставки:</label>
+                <label for="address">Address:</label>
                 <input type="text" id="address" name="address" required>
             </div>
-            <div class="form-group">
-                <label for="phoneNumber">Номер телефона:</label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" required>
-            </div>
 	        <div class="total-price">
-	            <span>Общая сумма: </span><span id="totalPrice">0.00</span> грн.
+	            <span>Sum: </span><span id="totalPrice">0.00</span> UA.
 	        </div>
-	        <button id="checkoutButton">Оформить заказ</button>
+	        <button type="submit" id="checkoutButton">Order</button>
         </form>
-        
     </div>
     <script src="/scripts/header.js"></script>
     <script src="/scripts/cart.js"></script>
