--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,19 +22,19 @@
 					<input type="file" id="avatarUpload" class="file-input" name="avatar" accept="image/*">
 				</div>
 				<div class="form-group">
-					<input type="text" id="usernameOfUser" name="username"
+					<input type="text" id="usernameOfUser" name="username" class="input"
 						placeholder="Username:" required>
 				</div>
 				<div class="form-group">
-					<input type="email" id="email" name="email" placeholder="Email:"
+					<input class="input" type="email" id="email" name="email" placeholder="Email:"
 						required>
 				</div>
 				<div class="form-group">
-					<input type="password" id="oldPassword" name="oldPassword"
+					<input type="password" id="oldPassword" name="oldPassword" class="input"
 						placeholder="Old password:">
 				</div>
 				<div class="form-group">
-					<input type="password" id="password" name="password"
+					<input type="password" id="password" name="password" class="input"
 						placeholder="New password:">
 				</div>
 				<button type="submit">Submit</button>
